# ttydb

./: .gitignore  Modelfile  model_training.ipynb
benchmarks/: api.py  cot.py  cot_logs.txt  cot_setup.py  final.py  final_logs.txt  main.py  pyproject.toml  self_correcting.txt  test.py  test2.py
report/: report.typ  template_1.typ  template_2.typ
scraper/: data.csv  logs.txt  main.py  pyproject.toml
scraper/src/generator/: __init__.py
web-app/: package-lock.json  package.json
web-app/app/: globals.css  page.tsx
web-app/app/dashboard/: page.tsx
web-app/app/dashboard/notebooks/[notebookId]/: page.tsx
web-app/components/: app-sidebar.tsx  dropzone.tsx  features.tsx  hero.tsx  nav-main.tsx  nav-user.tsx  navbar.tsx  query-input.tsx  sign-in-modal.tsx  sign-up-modal.tsx
web-app/components/ui/: sidebar.tsx
web-app/lib/: auth-client.ts  auth.ts
web-app/prisma/: schema.prisma
web-app/public/: sample_data.csv
