[project]
name = "benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "jsonschema>=4.25.0",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.6",
    "numpy>=2.3.2",
    "ollama>=0.5.3",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "sqlparse>=0.5.3",
]
